--- a/cpp/msbuild/freeze.nuget.targets
+++ b/cpp/msbuild/freeze.nuget.targets
@@ -8,17 +8,13 @@
     <ItemGroup>
         <Libraries Include="$(Ice_SrcRootDir)bin\$(Platform)\$(Configuration)\*.dll"/>
         <ImportLibraries Include="$(Ice_SrcRootDir)lib\$(Platform)\$(Configuration)\*.lib"/>
-    </ItemGroup>
-
-    <!-- Win32 Release binaries -->
-    <ItemGroup Condition="'$(Platform)|$(Configuration)' == 'Win32|Release'">
-        <Executables Include="$(Ice_SrcRootDir)bin\$(Platform)\$(Configuration)\*.exe"/>
+        <Executables Include="$(Ice_SrcRootDir)bin\$(Platform)\$(Configuration)\*.exe"
+                     Exclude="$(Ice_SrcRootDir)bin\$(Platform)\$(Configuration)\slice2*.exe"/>
     </ItemGroup>
 
     <!-- x64 Release binaries -->
     <ItemGroup Condition="'$(Platform)|$(Configuration)' == 'x64|Release'">
-        <Executables Include="$(Ice_SrcRootDir)bin\$(Platform)\$(Configuration)\*.exe"
-                     Exclude="$(Ice_SrcRootDir)bin\$(Platform)\$(Configuration)\slice2*.exe"/>
+        <Tools Include="$(Ice_SrcRootDir)bin\$(Platform)\$(Configuration)\slice2*.exe"/>
     </ItemGroup>
 
     <!-- public header files and sources -->
@@ -29,13 +25,14 @@
         <Headers Include="$(Ice_SrcRootDir)include\generated\$(Platform)\$(Configuration)\**\*.h" />
     </ItemGroup>
 
-    <!-- Copy header files in Win32 Release, the files are identical in all configurations -->
-    <Target Name="CopyHeaders" Condition="'$(Platform)|$(Configuration)' == 'Win32|Release'">
-        <Copy SourceFiles="@(Headers)" DestinationFolder="$(PackageDirectory)\build\native\include\%(Headers.RecursiveDir)" />
-    </Target>
-
     <!-- Copy required files to the package specific directories -->
-    <Target Name="NugetPack" DependsOnTargets="CopyHeaders">
+    <Target Name="NugetPack">
+        <Copy Condition="'$(Platform)|$(Configuration)' == 'Win32|Release'" 
+              SourceFiles="@(Headers)" DestinationFolder="$(PackageDirectory)\build\native\include\%(Headers.RecursiveDir)" />
+        <Copy Condition="'$(Platform)|$(Configuration)' == 'Win32|Release'"
+              SourceFiles="@(Slices)" DestinationFolder="$(PackageDirectory)\slice\%(Slices.RecursiveDir)" />
+        <Copy Condition="'$(Platform)|$(Configuration)' == 'x64|Release'"
+              SourceFiles="@(Tools)" DestinationFolder="$(PackageDirectory)\tools" />
         <Copy SourceFiles="@(Executables)" DestinationFolder="$(PackageDirectory)\build\native\bin\$(Platform)\$(Configuration)" />
         <Copy SourceFiles="@(Libraries)" DestinationFolder="$(PackageDirectory)\build\native\bin\$(Platform)\$(Configuration)" />
         <Copy SourceFiles="@(ImportLibraries)" DestinationFolder="$(PackageDirectory)\build\native\lib\$(Platform)\$(Configuration)" />
