--- a/cpp/msbuild/zeroc.freeze.v120.nuspec
+++ b/cpp/msbuild/zeroc.freeze.v120.nuspec
@@ -4,14 +4,14 @@
     <id>zeroc.freeze.v120</id>
     <title>ZeroC Freeze C++ for Visual Studio 2013</title>
     <version>3.7.0</version>
-    <authors>ZeroC, Inc</authors>
-    <licenseUrl>https://zeroc.com/licensing</licenseUrl>
-    <projectUrl>http://www.zeroc.com</projectUrl>
+    <authors>ZeroC</authors>
+    <licenseUrl>https://raw.githubusercontent.com/zeroc-ice/freeze/3.7/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/zeroc-ice/freeze</projectUrl>
     <iconUrl>https://zeroc.com/images/logos/zeroc/zeroc_logo-64x64.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A comprehensive rpc framework.</description>
-    <releaseNotes>https://doc.zeroc.com/display/Ice37/Ice+Release+Notes</releaseNotes>
-    <tags>ice native</tags>
+    <description>Freeze C++ SDK for Visual Studio 2013 (v120). Freeze stores Ice objects in Berkeley DB databases.</description>
+    <releaseNotes>https://doc.zeroc.com/display/Rel/Freeze+3.7.0+Release+Notes</releaseNotes>
+    <tags>freeze ice native rpc v120 zeroc</tags>
     <dependencies>
       <dependency id="zeroc.ice.v120" version="[3.7.0]"/>
     </dependencies>
