--- a/cpp/msbuild/zeroc.freeze.v140.nuspec
+++ b/cpp/msbuild/zeroc.freeze.v140.nuspec
@@ -2,16 +2,16 @@
 <package >
   <metadata>
     <id>zeroc.freeze.v140</id>
-    <title>ZeroC Freeze C++ for Visual Studio 2015</title>
+    <title>ZeroC Freeze C++ for Visual Studio 2013</title>
     <version>3.7.0</version>
-    <authors>ZeroC, Inc</authors>
-    <licenseUrl>https://zeroc.com/licensing</licenseUrl>
-    <projectUrl>http://www.zeroc.com</projectUrl>
+    <authors>ZeroC</authors>
+    <licenseUrl>https://raw.githubusercontent.com/zeroc-ice/freeze/3.7/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/zeroc-ice/freeze</projectUrl>
     <iconUrl>https://zeroc.com/images/logos/zeroc/zeroc_logo-64x64.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A comprehensive rpc framework.</description>
-    <releaseNotes>https://doc.zeroc.com/display/Ice37/Ice+Release+Notes</releaseNotes>
-    <tags>ice native</tags>
+    <description>Freeze C++ SDK for Visual Studio 2015 (v140). Freeze stores Ice objects in Berkeley DB databases.</description>
+    <releaseNotes>https://doc.zeroc.com/display/Rel/Freeze+3.7.0+Release+Notes</releaseNotes>
+    <tags>freeze ice native rpc v140 zeroc</tags>
     <dependencies>
       <dependency id="zeroc.ice.v140" version="[3.7.0]"/>
     </dependencies>
