--- a/demos/java-compat/gradle/wrapper/gradle-wrapper.properties
+++ b/demos/java-compat/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jul 28 16:55:29 CEST 2017
+#Sat Mar 10 23:42:06 CET 2018
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.3.1-bin.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.0.1-bin.zip
+zipStoreBase=GRADLE_USER_HOME
