--- a/java/gradle/library.gradle
+++ b/java/gradle/library.gradle
@@ -73,7 +73,11 @@ assemble.dependsOn(jarSources)
 
 javadoc {
     failOnError = false
-    options.header = project.displayName
+    options.header = project.ext.displayName
+    if(JavaVersion.current() > JavaVersion.VERSION_1_8) {
+        // Add -quiet to workaround Gradle bug https://github.com/gradle/gradle/issues/2354
+        options.addStringOption("html4", "-quiet")
+    }
     classpath =project.sourceSets.main.compileClasspath
 }
 
