--- a/cpp/msbuild/zeroc.freeze.v140.nuspec
+++ b/cpp/msbuild/zeroc.freeze.v140.nuspec
@@ -7,7 +7,7 @@
     <authors>ZeroC</authors>
     <license type="expression">GPL-2.0-only</license>
     <projectUrl>https://github.com/zeroc-ice/freeze</projectUrl>
-    <iconUrl>https://zeroc.com/images/logos/zeroc/zeroc_logo-64x64.png</iconUrl>
+    <icon>logo.png</icon>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Freeze C++ SDK for Visual Studio 2015 (v140). Freeze stores Ice objects in Berkeley DB databases.</description>
     <releaseNotes>https://doc.zeroc.com/rel/freeze-releases/freeze-3-7/freeze-3-7-1000-release-notes/supported-platforms-for-freeze-3-7-1000</releaseNotes>
